@@ -4,6 +4,8 @@ ftl (0.3.0)
   * Modernize aws usage by converting to aws-sdk-go
   * Enhanced command line options by converting to urfave/cli
   * Integration testing using assert.sh
+  * List output changed to refer to target name ('current') rather than
+    'active'
 
 -- Rhett Garber <rhettg@gmail.com>  Tue, 10 Jun 2014 10:48:00 -0700
 
